# sbomify-action

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  SECURITY.md  action.yml  package.json  pyproject.toml
.github/workflows/: license-db.yaml  pypi.yaml  sbomify.yaml
docs/adr/: 0001-record-architecture-decisions.md  0002-plugin-architecture.md
examples/docker-hub/: Dockerfile.dhi  Dockerfile.official  README.md  hello.py  run-e2e.sh
sbomify_action/: __init__.py  additional_packages.py  augmentation.py  enrichment.py  exceptions.py  http_client.py  logging_config.py  serialization.py  spdx3.py  tool_checks.py  validation.py
sbomify_action/_augmentation/: __init__.py  metadata.py  protocol.py  registry.py
sbomify_action/_augmentation/providers/: __init__.py  bitbucket.py  docker_image.py  github.py  gitlab.py  json_config.py  sbomify_api.py
sbomify_action/_dependency_expansion/: enricher.py
sbomify_action/_dependency_expansion/expanders/: pipdeptree.py
sbomify_action/_enrichment/: enricher.py  license_db_generator.py  license_normalizer.py  license_utils.py  metadata.py  protocol.py  registry.py  utils.py
sbomify_action/_enrichment/sources/: conan.py  cratesio.py  debian.py  license_db.py  lifecycle.py  pubdev.py  pypi.py  repology.py  tea.py
sbomify_action/_generation/: buildkit_provenance.py  chainguard.py  dockerhub.py  generator.py  registry.py  sbom_merge.py  utils.py
sbomify_action/_generation/generators/: cdxgen.py  cyclonedx_cargo.py  cyclonedx_py.py  syft.py  trivy.py
sbomify_action/_hash_enrichment/: enricher.py
sbomify_action/_hash_enrichment/parsers/: package_lock.py  pnpm_lock.py  uv_lock.py
sbomify_action/_processors/: releases_api.py
sbomify_action/_upload/destinations/: sbomify.py
sbomify_action/_yocto/: __init__.py  api.py  models.py  parser.py  pipeline.py  purl.py
sbomify_action/cli/: main.py  tea.py
sbomify_action/cli/wizard/: prompts.py
scripts/: generate_additional_packages.sh
tests/: conftest.py  test_augmentation_module.py  test_augmentation_providers.py  test_buildkit_provenance.py  test_chainguard.py  test_ci_providers.py  test_dockerhub.py  test_enrichment_module.py  test_generation_plugin.py  test_sbom_merge.py  test_schema_compliance.py  test_serialization.py  test_spdx2_version_override.py  test_spdx3.py  test_tea_cli.py  test_tea_enrichment.py  test_timestamp_library.py  test_tool_checks.py  test_upload_module.py  test_working_dir.py  test_yocto_api.py  test_yocto_pipeline.py  test_yocto_purl.py
tests/test-data/: spdx3_multi_type.json
